--- a/collect-web/collect-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/collect-web/collect-webapp/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
     http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
 	<display-name>collect</display-name>
+	
+	<listener>
+		<listener-class>org.openforis.collect.web.ApplicationServletContextListener</listener-class>
+	</listener>
 
 	<context-param>
 		<param-name>webAppRootKey</param-name>
@@ -100,11 +104,6 @@
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet>
-		<servlet-name>openforis-collect-init-servlet</servlet-name>
-		<servlet-class>org.openforis.collect.web.servlet.InitServlet</servlet-class>
-		<load-on-startup>2</load-on-startup>
 	</servlet>
 	
 	<!-- ====================================================================== -->
