--- a/collect-web/collect-webapp/src/main/webapp/WEB-INF/labels/designer/label.properties
+++ b/collect-web/collect-webapp/src/main/webapp/WEB-INF/labels/designer/label.properties
@@ -111,6 +111,7 @@ survey.advanced_functions=Advanced Functions
 survey.creation_date=Created
 survey.modified_date=Modified
 survey.last_change=Last change
+
 survey.files=Files
 survey.file.type=Type
 survey.file.type.generic=Generic
@@ -262,6 +263,9 @@ survey.template.type.socioeconomic=Socioeconomic
 survey.template.type.collect_earth=Collect Earth
 survey.template.type.collect_earth_ipcc=Collect Earth + IPCC
 survey.template.type.blank=Blank (start from scratch)
+survey.template.user_group=User Group
+survey.template.user_group.private=Private
+survey.template.user_group.public=Public
 
 survey.reference_data.import_error.row=Row
 survey.reference_data.import_error.columns=Columns
