Change user groups into institutions (work in progress)

--- a/collect-web/collect-webapp/src/main/webapp/WEB-INF/labels/designer/label.properties
+++ b/collect-web/collect-webapp/src/main/webapp/WEB-INF/labels/designer/label.properties
@@ -263,9 +263,9 @@ survey.template.type.socioeconomic=Socioeconomic
 survey.template.type.collect_earth=Collect Earth
 survey.template.type.collect_earth_ipcc=Collect Earth + IPCC
 survey.template.type.blank=Blank (start from scratch)
-survey.template.user_group=User Group
-survey.template.user_group.private=Private
-survey.template.user_group.public=Public
+survey.template.institution=Institution
+survey.template.institution.private=Private
+survey.template.institution.public=Public
 
 survey.reference_data.import_error.row=Row
 survey.reference_data.import_error.columns=Columns
