--- a/collect-web/collect-webapp/src/main/webapp/WEB-INF/labels/designer/label.properties
+++ b/collect-web/collect-webapp/src/main/webapp/WEB-INF/labels/designer/label.properties
@@ -264,8 +264,8 @@ survey.template.type.collect_earth=Collect Earth
 survey.template.type.collect_earth_ipcc=Collect Earth + IPCC
 survey.template.type.blank=Blank (start from scratch)
 survey.template.institution=Institution
-survey.template.institution.private=Private
-survey.template.institution.public=Public
+survey.template.institution.private=Private (visible only to the current user)
+survey.template.institution.public=Public (visible to everyone)
 
 survey.reference_data.import_error.row=Row
 survey.reference_data.import_error.columns=Columns
@@ -305,6 +305,7 @@ survey.import_survey.title=Survey import
 survey.import_survey.survey_name=Name
 survey.import_survey.file_name=File name
 survey.import_survey.uri=URI
+survey.import_survey.institution=Institution
 survey.import_survey.file_not_selected=---no file selected---
 survey.import_survey.updating_published_survey=Published survey exists, a copy will be created
 survey.import_survey.updating_survey_work=Updating existing survey, temporary changes to that survey will be overridden
